<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowTicketsSummaryActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSportName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="end"
            android:text="@string/labelNumTicketsAdult"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNumTicketsAdult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text=""
            android:layout_weight="0.2"
            android:textStyle="bold"
            android:paddingLeft="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="end"
            android:text="@string/labelNumTicketsChildren"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNumTicketsChildren"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_weight="0.2"
            android:text=""
            android:textStyle="bold"
            android:paddingLeft="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="end"
            android:text="@string/labelTotalPrice"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTotalPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text=""
            android:layout_weight="0.2"
            android:textStyle="bold"
            android:paddingLeft="5dp"/>
    </LinearLayout>



</LinearLayout>